--- a/templates/comments.mustache
+++ b/templates/comments.mustache
@@ -40,8 +40,8 @@
                 "canviewdeleted": true,
                 "canreply": true,
                 "deleleuser": {
-                    "firstname": "",
-                    "lastname": ""
+                    "fullname": "",
+                    "profileurl": ""
                 },
                 "deleted": false,
                 "deletedtime": 0,
@@ -49,6 +49,7 @@
                 "rownumber": 1,
                 "root": true,
                 "authorname": "Teacher",
+                "authorprofileurl": "",
                 "posttime": "6 December 2019, 4:06 PM",
                 "canedit": true,
                 "replies": [
@@ -64,8 +65,8 @@
                         "canviewdeleted": true,
                         "canreply": true,
                         "deleleuser": {
-                            "firstname": "",
-                            "lastname": ""
+                            "fullname": "",
+                            "profileurl": ""
                         },
                         "deleted": false,
                         "deletedtime": 0,
@@ -73,6 +74,7 @@
                         "rownumber": 2,
                         "root": false,
                         "authorname": "Teacher",
+                        "authorprofileurl": "",
                         "posttime": "6 December 2019, 4:08 PM",
                         "canedit": true
                     }
