--- a/styles.css
+++ b/styles.css
@@ -824,12 +824,13 @@
 }
 
 /* Specific CSS override align-items-center, we need to prevent align-items: center in the form-group. */
-#fgroup_id_rate_grp div.align-items-center,
-#fgroup_id_rate_grp div.align-items-center,
-#fgroup_id_difficultylevel_grp div.align-items-center,
-#fgroup_id_publiccomment_grp div.align-items-center,
-#fgroup_id_myrate_grp div.align-items-center,
-#fgroup_id_myattempts_grp div.align-items-center,
-#fgroup_id_mydifficulty_grp div.align-items-center {
+.path-mod-studentquiz #fgroup_id_rate_grp div.align-items-center,
+.path-mod-studentquiz #fgroup_id_rate_grp div.align-items-center,
+.path-mod-studentquiz #fgroup_id_difficultylevel_grp div.align-items-center,
+.path-mod-studentquiz #fgroup_id_publiccomment_grp div.align-items-center,
+.path-mod-studentquiz #fgroup_id_myrate_grp div.align-items-center,
+.path-mod-studentquiz #fgroup_id_myattempts_grp div.align-items-center,
+.path-mod-studentquiz #fgroup_id_mydifficulty_grp div.align-items-center {
+    /* stylelint-disable-next-line declaration-no-important */
     align-items: flex-start !important;
 }
